--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
       <a href="#" class="navbar-brand">Recipe Book</a>
     </div>
 
-    <div class="collapse navbar-collapse">
+    <div class="navbar navbar-default">
       <ul class="nav navbar-nav">
         <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
         <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
